<?xml version="1.0"?>
<package>
  <name>audio_file_player</name>
  <version>0.0.2</version>
  <description>The audio_file_player package contains a node to play audio files
    through an action server or a topic interface.</description>

  <author email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</author>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>